RESOLVED FIXED46216
[GTK] The FreeType backend does not respect the FC_EMBOLDEN property
https://bugs.webkit.org/show_bug.cgi?id=46216
Summary [GTK] The FreeType backend does not respect the FC_EMBOLDEN property
Martin Robinson
Reported 2010-09-21 14:13:24 PDT
The FC_EMBOLDEN property is used by FontConfig to enable synthetic bold during rendering. We do not look at this property at all.
Attachments
Patch for this issue (6.46 KB, patch)
2010-09-21 14:26 PDT, Martin Robinson
no flags
Fix my broken commit (2.85 KB, patch)
2010-10-07 14:15 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2010-09-21 14:26:56 PDT
Created attachment 68292 [details] Patch for this issue
chris fleizach
Comment 2 2010-09-21 15:16:49 PDT
Comment on attachment 68292 [details] Patch for this issue r=me
Martin Robinson
Comment 3 2010-09-21 17:03:25 PDT
Thanks for the review! I should be able to land this once the patches on the blockers are reviewed.
Martin Robinson
Comment 4 2010-10-07 11:40:01 PDT
Martin Robinson
Comment 5 2010-10-07 14:15:14 PDT
Created attachment 70149 [details] Fix my broken commit
Martin Robinson
Comment 6 2010-10-07 14:15:53 PDT
This commit was landed in a broken state. I've posted a patch which fixes this.
Gustavo Noronha (kov)
Comment 7 2010-10-07 14:22:30 PDT
Comment on attachment 70149 [details] Fix my broken commit Sure!
Martin Robinson
Comment 8 2010-10-07 16:57:50 PDT
Comment on attachment 70149 [details] Fix my broken commit Clearing flags on attachment: 70149 Committed r69355: <http://trac.webkit.org/changeset/69355>
Martin Robinson
Comment 9 2010-10-07 16:57:54 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 10 2010-10-07 18:11:30 PDT
http://trac.webkit.org/changeset/69355 might have broken GTK Linux 32-bit Release
Tony Chang
Comment 11 2011-05-06 10:27:58 PDT
platform/gtk/fonts/fontconfig-synthetic-bold.html is missing a pixel test result. Can you add one?
Martin Robinson
Comment 12 2011-05-09 10:52:14 PDT
Note You need to log in before you can comment on or make changes to this bug.