2010-09-21  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Chris Fleizach.

        [GTK] The FreeType backend does not respect the FC_EMBOLDEN property
        https://bugs.webkit.org/show_bug.cgi?id=46216

        Added tests for this issue.

        * platform/gtk/fonts/fontconfig-synthetic-bold-expected.txt: Added.
        * platform/gtk/fonts/fontconfig-synthetic-bold.html: Added.
2010-10-05  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Chris Fleizach.

        [GTK] The FreeType backend does not respect the FC_EMBOLDEN property
        https://bugs.webkit.org/show_bug.cgi?id=46216

        Look for the FC_EMBOLDEN property of the FcPattern when constructing
        FontPlatformData and use it to enable synthetic bold fonts when necessary.

        Test: platform/gtk/fonts/fontconfig-synthetic-bold.html

        * platform/graphics/cairo/FontPlatformDataFreeType.cpp:
        (WebCore::FontPlatformData::FontPlatformData): Properly handle the FC_EMBOLDEN property.
2010-09-21  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Chris Fleizach.

        [GTK] The FreeType backend does not respect the FC_EMBOLDEN property
        https://bugs.webkit.org/show_bug.cgi?id=46216

        * DumpRenderTree/gtk/fonts/fonts.conf: Add a setting which enables FC_EMBOLDEN
        for DejaVu Serif when there is no bold version available. This is necessary to
        properly test the property in layout tests.

Canonical link: https://commits.webkit.org/59927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69326 268f45cc-cd09-0410-ab3c-d52691b4dbfc